# quadruped_locomotion

./: CMakeLists.txt  README.md  cmake_build.sh  package.xml
config/: quadruped_drivers.yaml
examples/: example_1.cpp
include/quadruped_locomotion/: types.hpp
include/quadruped_locomotion/api/: client.hpp  server.hpp  transport.hpp
include/quadruped_locomotion/control/: quadruped_controller.hpp
include/quadruped_locomotion/core/: system.hpp  thread_component.hpp
include/quadruped_locomotion/driver/: driver_interface.hpp  gazebo_driver.hpp  quadruped_driver.hpp
include/quadruped_locomotion/settings/: argument_parser.hpp  loader.hpp
include/quadruped_locomotion/utils/: print.hpp  time.hpp  yaml.hpp
launch/: quadruped_locomotion.launch.py
src/: main.cpp
src/api/: client.cpp  server.cpp
src/control/: quadruped_controller.cpp
src/core/: system.cpp  thread_component.cpp
src/driver/: gazebo_driver.cpp  quadruped_driver.cpp
src/settings/: argument_parser.cpp  loader.cpp
